--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,14 @@
-fastapi>=0.103.1
-uvicorn>=0.23.2
-pydantic>=2.3.0
-python-jose>=3.3.0
-passlib>=1.7.4
-python-multipart>=0.0.6
-sqlalchemy>=2.0.20
-psycopg2-binary>=2.9.7
-python-dotenv>=1.0.0
-web3>=6.9.0
-boto3==1.29.3
-python-jose[cryptography]==3.3.0
-alembic==1.12.1
-pytest>=7.4.2
-httpx>=0.24.1
+fastapi==0.104.0
+uvicorn==0.23.2
+sqlalchemy==2.0.22
+alembic==1.12.0
+pydantic==2.4.2
+python-jose==3.3.0
+passlib==1.7.4
+python-multipart==0.0.6
+psycopg2-binary==2.9.9
+web3==6.10.0
+python-dotenv==1.0.0
 # Performance optimization packages
 uvloop>=0.17.0
 httptools>=0.6.0
