Update .gitignore with ML-specific patterns for data, models, and notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,74 @@ node_modules/
 .env
 .DS_Store
 *.log
+
+# Python related
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+.pytest_cache/
+.coverage
+htmlcov/
+.venv/
+venv/
+ENV/
+
+# Machine Learning specific
+backend/ml/**/data/
+backend/ml/**/models/
+backend/ml/**/logs/
+backend/ml/**/notebooks/.ipynb_checkpoints/
+backend/ml/**/*.pkl
+backend/ml/**/*.h5
+backend/ml/**/*.joblib
+backend/ml/**/*.model
+backend/ml/**/*.parquet
+backend/ml/**/*.npy
+backend/ml/**/*.npz
+backend/ml/**/*.csv
+backend/ml/**/*.tfevents.*
+backend/ml/**/runs/
+backend/ml/**/checkpoints/
+backend/ml/**/wandb/
+backend/ml/**/mlruns/
+backend/ml/**/tensorboard/
+backend/ml/**/saved_models/
+backend/ml/**/*.onnx
+backend/ml/**/*.pt
+backend/ml/**/*.pth
+backend/ml/**/.ipynb_checkpoints/
+backend/ml/**/notebook/figures/
+backend/ml/**/experiments/
+backend/ml/**/cache/
+backend/ml/**/*.bin
+backend/ml/**/results/
+backend/ml/**/tmp/
+
+# Jupyter Notebooks
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+*.ipynb_metadata
+jupyter_execute/
+
+# IDE related
+.idea/
+.vscode/
+*.swp
+*.swo
